[gd_scene format=3 uid="uid://br62pn2xq4lod"]

[ext_resource type="Script" uid="uid://dtbrcmfjsku7o" path="res://Scripts/GameManager.gd" id="1_j5yw3"]
[ext_resource type="PackedScene" uid="uid://dcl768gtkchcy" path="res://UI/TowerShop.tscn" id="2_tower"]
[ext_resource type="Script" uid="uid://b0jkmyd212nuf" path="res://UI/game_ui.gd" id="3_b2bpf"]
[ext_resource type="PackedScene" uid="uid://cfehaij52rv3d" path="res://Scenes/Levels/level_1.tscn" id="6_level1"]

[node name="Main" type="Node2D" unique_id=693202688]

[node name="GameBackground" type="CanvasLayer" parent="." unique_id=2130161548]
layer = -100

[node name="ColorRect" type="ColorRect" parent="GameBackground" unique_id=1160791977]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.6, 0.3, 1)

[node name="Level1" parent="." unique_id=449945131 instance=ExtResource("6_level1")]

[node name="GameManager" type="Node2D" parent="." unique_id=588879921]
script = ExtResource("1_j5yw3")

[node name="UI" type="CanvasLayer" parent="GameManager" unique_id=674492340]
script = ExtResource("3_b2bpf")

[node name="TopBar" type="Panel" parent="GameManager/UI" unique_id=1944156272]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_bottom = 120.0
grow_horizontal = 0

[node name="CurrencyLabel" type="Label" parent="GameManager/UI/TopBar" unique_id=1415205712]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 280.0
offset_bottom = 35.0
theme_override_colors/font_color = Color(1, 0.847059, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
text = "Gold: $300"
horizontal_alignment = 2

[node name="WaveLabel" type="Label" parent="GameManager/UI/TopBar" unique_id=2101350596]
layout_mode = 0
offset_left = 20.0
offset_top = 40.0
offset_right = 280.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(0.529412, 0.807843, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
text = "Wave: 1"
horizontal_alignment = 2

[node name="LivesLabel" type="Label" parent="GameManager/UI/TopBar" unique_id=472699789]
layout_mode = 0
offset_left = 20.0
offset_top = 70.0
offset_right = 280.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(1, 0.333333, 0.333333, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
text = "Lives: 20"
horizontal_alignment = 2

[node name="GemsLabel" type="Label" parent="GameManager/UI/TopBar" unique_id=790231632]
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 280.0
offset_bottom = 125.0
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
text = "Gems: 10"
horizontal_alignment = 2

[node name="TowerShop" parent="GameManager/UI" unique_id=1554464940 instance=ExtResource("2_tower")]
offset_top = -302.0
offset_bottom = -1.0

[node name="StartButton" type="Button" parent="GameManager/UI" unique_id=312847653]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -30.0
offset_right = 120.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.1, 0.05, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 20
text = "â–¶  Start Wave 1/4"
visible = false
